--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: copyable
-description: A new Flutter project.
+description: One place for all your repetetive content..
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -31,19 +31,29 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.3.7
   firebase_core: ^1.12.0
-  firebase_storage: ^10.2.7
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.4
+  flutter_linkify: ^5.0.2
+  flutter_staggered_grid_view: ^0.6.1
+  flutter_svg: ^1.1.1+1
   fluttertoast: ^8.0.9
   google_sign_in: ^5.3.3
+  intl: ^0.17.0
+  keymap: ^0.0.91
+  material_design_icons_flutter: ^5.0.6595
   provider: ^6.0.3
   shared_preferences: ^2.0.15
+  showcaseview: ^1.1.8
   sizer: ^2.0.15
+  universal_html: ^2.0.8
+  url_launcher: ^6.1.5
   uuid: ^3.0.6
 
 dev_dependencies:
+  flutter_launcher_icons: "^0.10.0"
   flutter_lints: ^2.0.0
+
   flutter_test:
     sdk: flutter
 
@@ -51,14 +61,13 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/.
   #   - images/a_dot_ham.jpeg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -104,3 +113,13 @@ flutter:
           weight: 900
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/logo.png"
+  min_sdk_android: 21 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/logo.png"
+    background_color: "#ffffff"
+    theme_color: "#0175C2"
